<?xml version="1.0" encoding="utf-8"?>

<!--##################################################################-->
<!--                                                                  -->
<!--     CSCI-546, Spring 2009 Assignment III Solution by Group #7    -->
<!--                                                                  -->
<!--     Group Members: Chang, Chin-Kai      chinkaic@usc.edu         -->
<!--                    Moon, Ji Hyun        jihyunmo@usc.edu         -->
<!--                    Patlolla, Avinash    patlolla@usc.edu         -->
<!--                    Viswanathan, Manu    mviswana@usc.edu         -->
<!--                                                                  -->
<!--##################################################################-->
<!--                                                                  -->
<!-- This file specifies various string resources used by the photo   -->
<!-- manager application for the Android/gPhone platform that tags    -->
<!-- new pictures taken with the camera with the current GPS coordi-  -->
<!-- nates and optional audio.                                        -->
<!--                                                                  -->
<!--##################################################################-->

<!--##################################################################-->
<!--                                                                  -->
<!-- AssignmentThree: a photo manager application for the gPhone      -->
<!--                                                                  -->
<!-- Copyright (C) 2009 Chin-Kai Chang                                -->
<!--                    Ji Hyun Moon                                  -->
<!--                    Avinash Patlolla                              -->
<!--                    Manu Viswanathan                              -->
<!--                                                                  -->
<!-- This file is part of AssignmentThree.                            -->
<!--                                                                  -->
<!-- AssignmentThree is free software; you can redistribute it and/or -->
<!-- modify it under the terms of the GNU General Public License as   -->
<!-- published by the Free Software Foundation; either version 2 of   -->
<!-- the License, or (at your option) any later version.              -->
<!--                                                                  -->
<!-- AssignmentThree is distributed in the hope that it will be       -->
<!-- useful, but WITHOUT ANY WARRANTY; without even the implied       -->
<!-- warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. -->
<!-- See the GNU General Public License for more details.             -->
<!--                                                                  -->
<!-- You should have received a copy of the GNU General Public        -->
<!-- License along with AssignmentThree; if not, write to the Free    -->
<!-- Software Foundation, Inc., 59 Temple Place, Suite 330, Boston,   -->
<!-- MA 02111-1307 USA.                                               -->
<!--                                                                  -->
<!--##################################################################-->

<!--##################################################################-->
<!--
     REVISION HISTORY

     $HeadURL$
     $Id$
-->
<!--##################################################################-->

<resources>
   <string name="app_name">Grp 7 Assign. III</string>
   <string name="group_name">cs546.group7</string>

   <string name="select_thumbnail_msg">Please select a thumbnail first</string>

   <string name="add_picture_menu_item">Add pic.</string>
   <string name="remove_picture_menu_item">Rm. pic./audio</string>
   <string name="remove_all_menu_item">Remove all</string>
   <string name="not_taken_by_me">This picture was not taken by me. Deleted only the audio tag.</string>

   <string name="preview_latitude_label">Latitude:</string>
   <string name="preview_longitude_label">Longitude:</string>
   <string name="preview_gps_unknown">(?)</string>
   <string name="preview_snap_msg">Press trackball to snap new picture</string>
   <string name="accept_picture_menu_item">Yes, this picture is okay</string>
   <string name="reject_picture_menu_item">No, I want to try again</string>
   <string name="take_picture_msg">Please snap a picture first!</string>
   <string name="preview_accept_btn_label">Pic. OK</string>
   <string name="preview_reject_btn_label">Try again</string>

   <string name="capture_msg">
     Captured from camera by cs546.group7.AssignmentThree on
   </string>
   <string name="capture_failed_msg">
     Sorry, unable to capture a picture from the camera
   </string>
   <string name="post_capture_query_failed_msg">
     Sorry, picture captured from the camera could not be queried
   </string>
   <string name="no_gps_provider">
     Sorry, unable to obtain a GPS location provider
   </string>
   <string name="bad_gps_msg">
     Sorry, location data is either stale or unavailable
   </string>

   <string name="picture_tab_label"><big>Picture</big></string>
   <string name="play_audio_tag_menu_item">Play Audio Tag</string>
   <string name="record_audio_tag_menu_item">Record Audio Tag</string>
   <string name="record_audio_msg">
     Speak into microphone and press center keypad button when done
   </string>
   <string name="play_audio_msg">
     Press center keypad button to cancel audio tag playback
   </string>
   <string name="audio_recorder_init_error_msg">
     Sorry, unable to create the audio recorder.
   </string>
   <string name="audio_recording_failed_msg">
     Sorry, the audio tag could not be created.
   </string>
   <string name="no_audio_tag_msg">
     Sorry, this picture does not (yet) have an audio tag.
   </string>
   <string name="audio_player_init_error_msg">
     Sorry, unable to create the audio player.
   </string>

   <string name="map_tab_label"><big>Map</big></string>
   <string name="map_empty_msg">
     <big>Sorry, the selected picture does not have any associated location data.</big>
   </string>

   <string name="alert_okay_label">OK</string>
</resources>
