<?xml version="1.0" encoding="utf-8"?>

<!--##################################################################-->
<!--                                                                  -->
<!--     CSCI-546, Spring 2009 Assignment III Solution by Group #7    -->
<!--                                                                  -->
<!--     Group Members: Chang, Chin-Kai      chinkaic@usc.edu         -->
<!--                    Moon, Ji Hyun        jihyunmo@usc.edu         -->
<!--                    Patlolla, Avinash    patlolla@usc.edu         -->
<!--                    Viswanathan, Manu    mviswana@usc.edu         -->
<!--                                                                  -->
<!--##################################################################-->
<!--                                                                  -->
<!-- This file specifies the menu for the display screen of a photo   -->
<!-- manager application that tags new pictures taken on the Google   -->
<!-- Phone with the current GPS coordinates and optional audio.       -->
<!--                                                                  -->
<!--##################################################################-->

<!--##################################################################-->
<!--                                                                  -->
<!-- AssignmentThree: a photo manager application for the gPhone      -->
<!--                                                                  -->
<!-- Copyright (C) 2009 Chin-Kai Chang                                -->
<!--                    Ji Hyun Moon                                  -->
<!--                    Avinash Patlolla                              -->
<!--                    Manu Viswanathan                              -->
<!--                                                                  -->
<!-- This file is part of AssignmentThree.                            -->
<!--                                                                  -->
<!-- AssignmentThree is free software; you can redistribute it and/or -->
<!-- modify it under the terms of the GNU General Public License as   -->
<!-- published by the Free Software Foundation; either version 2 of   -->
<!-- the License, or (at your option) any later version.              -->
<!--                                                                  -->
<!-- AssignmentThree is distributed in the hope that it will be       -->
<!-- useful, but WITHOUT ANY WARRANTY; without even the implied       -->
<!-- warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. -->
<!-- See the GNU General Public License for more details.             -->
<!--                                                                  -->
<!-- You should have received a copy of the GNU General Public        -->
<!-- License along with AssignmentThree; if not, write to the Free    -->
<!-- Software Foundation, Inc., 59 Temple Place, Suite 330, Boston,   -->
<!-- MA 02111-1307 USA.                                               -->
<!--                                                                  -->
<!--##################################################################-->

<!--##################################################################-->
<!--
     REVISION HISTORY

     $HeadURL$
     $Id$
-->
<!--##################################################################-->

<!-- The photo manager's main menu -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

   <item android:id="@+id/play_audio_tag"
         android:title="@string/play_audio_tag_menu_item"/>

   <item android:id="@+id/record_audio_tag"
         android:title="@string/record_audio_tag_menu_item"/>

   <item android:id="@+id/remove_audio_tag"
         android:title="@string/remove_audio_tag_menu_item"/>

   <item android:id="@+id/add_picture"
         android:title="@string/add_picture_menu_item"/>

   <item android:id="@+id/remove_picture"
         android:title="@string/remove_picture_menu_item"/>

   <item android:id="@+id/remove_all"
         android:title="@string/remove_all_menu_item"/>

</menu>
