<?xml version="1.0" encoding="utf-8"?>

<!--##################################################################-->
<!--                                                                  -->
<!--     CSCI-546, Spring 2009 Assignment III Solution by Group #7    -->
<!--                                                                  -->
<!--     Group Members: Chang, Chin-Kai      chinkaic@usc.edu         -->
<!--                    Moon, Ji Hyun        jihyunmo@usc.edu         -->
<!--                    Patlolla, Avinash    patlolla@usc.edu         -->
<!--                    Viswanathan, Manu    mviswana@usc.edu         -->
<!--                                                                  -->
<!--##################################################################-->
<!--                                                                  -->
<!-- This file specifies the user interface for the preview screen of -->
<!-- a photo manager application that tags new pictures taken on the  -->
<!-- gPhone with the current GPS coordinates and optional audio.      -->
<!--                                                                  -->
<!--##################################################################-->

<!--##################################################################-->
<!--                                                                  -->
<!-- AssignmentThree: a photo manager application for the gPhone      -->
<!--                                                                  -->
<!-- Copyright (C) 2009 Chin-Kai Chang                                -->
<!--                    Ji Hyun Moon                                  -->
<!--                    Avinash Patlolla                              -->
<!--                    Manu Viswanathan                              -->
<!--                                                                  -->
<!-- This file is part of AssignmentThree.                            -->
<!--                                                                  -->
<!-- AssignmentThree is free software; you can redistribute it and/or -->
<!-- modify it under the terms of the GNU General Public License as   -->
<!-- published by the Free Software Foundation; either version 2 of   -->
<!-- the License, or (at your option) any later version.              -->
<!--                                                                  -->
<!-- AssignmentThree is distributed in the hope that it will be       -->
<!-- useful, but WITHOUT ANY WARRANTY; without even the implied       -->
<!-- warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. -->
<!-- See the GNU General Public License for more details.             -->
<!--                                                                  -->
<!-- You should have received a copy of the GNU General Public        -->
<!-- License along with AssignmentThree; if not, write to the Free    -->
<!-- Software Foundation, Inc., 59 Temple Place, Suite 330, Boston,   -->
<!-- MA 02111-1307 USA.                                               -->
<!--                                                                  -->
<!--##################################################################-->

<!--##################################################################-->
<!--
     REVISION HISTORY

     $HeadURL$
     $Id$
-->
<!--##################################################################-->

<!-- We show the current GPS coordinates (if available) along with    -->
<!-- whatever the camera is currently picking up. To put these two    -->
<!-- things together, we use an top-level linear layout.              -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

<!-- We arrange the GPS coordinates in two rows along the top of the  -->
<!-- preview page. The neatest of doing this is inside a table.       -->
<TableLayout android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true">
   <TableRow>
      <TextView android:text="@string/preview_latitude_label"
                android:gravity="right"
                android:singleLine="true"/>

      <TextView android:id="@+id/preview_latitude"
                android:gravity="center"
                android:layout_weight="1"/>
   </TableRow>

   <TableRow>
      <TextView android:text="@string/preview_longitude_label"
                android:gravity="right"
                android:singleLine="true"/>

      <TextView android:id="@+id/preview_longitude"
                android:gravity="center"
                android:layout_weight="1"/>
   </TableRow>
</TableLayout>

<!-- Below the GPS coordinates row, we show the camera preview -->
<SurfaceView android:id="@+id/surface_view"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"/>

<!-- Finally, at the bottom, a small message indicating what the user -->
<!-- needs to do in order to snap a picture and buttons for accepting -->
<!-- or rejecting the snapped picture.                                -->
<LinearLayout android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_alignParentBottom="true">

   <!-- Button for accepting the snapped pictures -->
   <Button android:id="@+id/preview_accept_btn"
           android:text="@string/preview_accept_btn_label"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>

   <!-- Some help text indicating how the picture should be snapped -->
   <TextView android:text="@string/preview_snap_msg"
             android:gravity="center"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"/>

   <!-- Button for rejecting the snapped picture and trying again -->
   <Button android:id="@+id/preview_reject_btn"
           android:text="@string/preview_reject_btn_label"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>

</LinearLayout>

<!-- End of top-level layout element for this screen -->
</LinearLayout>
